[gd_scene load_steps=30 format=3 uid="uid://bjwsskaxq376t"]

[ext_resource type="Script" path="res://scripts/UI/StartMenu.gd" id="1_rlfnb"]
[ext_resource type="Theme" uid="uid://b6uhtsi5wy8or" path="res://assets/Recursos/Temas/default.theme" id="2_baduv"]
[ext_resource type="PackedScene" uid="uid://cdfbqv27sgbbl" path="res://assets/Modelos 3D/jammo/root.tscn" id="2_pwupd"]
[ext_resource type="Texture2D" uid="uid://bq7rmridto5m2" path="res://assets/Sprites/UI/space_pack/button_square_header_blade_rectangle.png" id="3_sjur2"]
[ext_resource type="Script" path="res://scripts/UI/menu_animation_manager.gd" id="4_2yvtr"]
[ext_resource type="AnimationLibrary" uid="uid://b77ecbxu8ulno" path="res://assets/Modelos 3D/jammo/animaciones/jammo_library.tres" id="4_88vpu"]
[ext_resource type="Texture2D" uid="uid://1vttv0npj64e" path="res://assets/Sprites/UI/space_pack/button_square_header_blade_rectangle_blue.png" id="4_wsxck"]
[ext_resource type="ButtonGroup" uid="uid://h2uolts0b0ce" path="res://assets/Recursos/ButtonGroups/singleplayer_difficulty.tres" id="5_ku851"]
[ext_resource type="ButtonGroup" uid="uid://duv5by7fnjtbh" path="res://assets/Recursos/ButtonGroups/singleplayer_goals.tres" id="6_ypyyx"]

[sub_resource type="Gradient" id="Gradient_31nmi"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.129412, 0.619608, 0.737255, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ickrf"]
resource_local_to_scene = true
gradient = SubResource("Gradient_31nmi")

[sub_resource type="Gradient" id="Gradient_m5im3"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.933333, 0.152941, 0.278431, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lcpvs"]
gradient = SubResource("Gradient_m5im3")

[sub_resource type="Gradient" id="Gradient_yktx2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.933333, 0.152941, 0.278431, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sxvuo"]
gradient = SubResource("Gradient_yktx2")

[sub_resource type="Gradient" id="Gradient_svb1x"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.129412, 0.619608, 0.737255, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p1pnq"]
gradient = SubResource("Gradient_svb1x")

[sub_resource type="Gradient" id="Gradient_csi0f"]
offsets = PackedFloat32Array(0.996528, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_srhlv"]
gradient = SubResource("Gradient_csi0f")

[sub_resource type="Environment" id="Environment_5bnlt"]
background_mode = 1
background_color = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0444c"]
shading_mode = 0
albedo_color = Color(0.129412, 0.619608, 0.737255, 1)

[sub_resource type="Animation" id="Animation_qyehy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../animation_manager:move")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jv43l"]
_data = {
"RESET": SubResource("Animation_qyehy")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t8jnx"]
animation = &"jammo_library/run_to_dive"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u4ggt"]
animation = &"jammo_library/baseball_strike"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_7gvcx"]
fadein_time = 1.0
fadeout_time = 1.0
break_loop_at_end = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aros8"]
animation = &"jammo_library/run"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_dnn1m"]
fadein_time = 0.1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_3cuse"]
graph_offset = Vector2(-536.611, 37.1043)
nodes/Animation/node = SubResource("AnimationNodeAnimation_t8jnx")
nodes/Animation/position = Vector2(-20, 460)
nodes/Bat/node = SubResource("AnimationNodeAnimation_u4ggt")
nodes/Bat/position = Vector2(-380, 280)
nodes/Bateo/node = SubResource("AnimationNodeOneShot_7gvcx")
nodes/Bateo/position = Vector2(-20, 220)
nodes/Correr/node = SubResource("AnimationNodeAnimation_aros8")
nodes/Correr/position = Vector2(-360, 140)
nodes/Sumergir/node = SubResource("AnimationNodeOneShot_dnn1m")
nodes/Sumergir/position = Vector2(280, 300)
nodes/output/position = Vector2(480, 220)
node_connections = [&"Bateo", 0, &"Correr", &"Bateo", 1, &"Bat", &"Sumergir", 0, &"Bateo", &"Sumergir", 1, &"Animation", &"output", 0, &"Sumergir"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rlfnb")

[node name="Start" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Start"]
layout_mode = 0
offset_left = 199.0
offset_top = 122.0
offset_right = 389.0
offset_bottom = 157.0
theme = ExtResource("2_baduv")
theme_override_colors/default_color = Color(0.0234375, 0.0231628, 0.0231628, 1)
text = "ROBO BALL"

[node name="Fondo" type="ColorRect" parent="Start"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 81.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.619608, 0.737255, 1)

[node name="Start" type="RichTextLabel" parent="Start/Fondo"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 35.0
offset_bottom = 65.0
grow_horizontal = 2
theme = ExtResource("2_baduv")
bbcode_enabled = true
text = "[center][shake rate=20.0 level=6 connected=1]TAP TO START[/shake][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
text_direction = 1

[node name="Start" type="Button" parent="Start"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Lobby Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_right = -600.0
grow_horizontal = 2
grow_vertical = 2

[node name="Single" type="Control" parent="Lobby Menu"]
layout_mode = 3
anchors_preset = 0
offset_left = -23.0
offset_top = 284.0
offset_right = 17.0
offset_bottom = 324.0
size_flags_horizontal = 0

[node name="Single Menu" type="Sprite2D" parent="Lobby Menu/Single"]
position = Vector2(311.14, 102.471)
rotation = -0.191986
scale = Vector2(2.48174, 341.963)
skew = 0.191986
texture = SubResource("GradientTexture1D_ickrf")

[node name="Single" type="Button" parent="Lobby Menu/Single"]
auto_translate_mode = 1
layout_mode = 2
offset_left = 199.0
offset_top = 162.0
offset_right = 413.0
offset_bottom = 236.0
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_hover_color = Color(0.129412, 0.619608, 0.737255, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Play
"
icon = ExtResource("3_sjur2")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="Title" type="RichTextLabel" parent="Lobby Menu/Single"]
layout_mode = 0
offset_left = 98.0
offset_top = 6.0
offset_right = 548.0
offset_bottom = 58.0
theme = ExtResource("2_baduv")
theme_override_colors/default_color = Color(0.917969, 0.401841, 0.297623, 1)
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "Singleplayer"
fit_content = true
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="Lobby Menu/Single"]
layout_mode = 0
offset_left = 48.0
offset_top = 86.0
offset_right = 553.0
offset_bottom = 160.0
theme = ExtResource("2_baduv")
bbcode_enabled = true
text = "[center] Play agains a machine in 1vs1 matches"

[node name="Multi" type="Control" parent="Lobby Menu"]
anchors_preset = 0
offset_left = 1178.0
offset_top = 677.0
offset_right = 1218.0
offset_bottom = 717.0

[node name="Multi Menu" type="Sprite2D" parent="Lobby Menu/Multi"]
position = Vector2(311.14, 106.471)
rotation = -0.191986
scale = Vector2(2.48174, 341.963)
skew = 0.191986
texture = SubResource("GradientTexture1D_lcpvs")

[node name="Title" type="RichTextLabel" parent="Lobby Menu/Multi"]
layout_mode = 0
offset_left = 98.0
offset_top = 6.0
offset_right = 548.0
offset_bottom = 58.0
theme = ExtResource("2_baduv")
theme_override_colors/default_color = Color(0.0180054, 0.746932, 0.921875, 1)
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "Multiplayer"
fit_content = true
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="Lobby Menu/Multi"]
layout_mode = 0
offset_left = 48.0
offset_top = 86.0
offset_right = 553.0
offset_bottom = 160.0
theme = ExtResource("2_baduv")
bbcode_enabled = true
text = "[center] Play agains another player in 1vs1 matches"

[node name="Multi" type="Button" parent="Lobby Menu/Multi"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 199.0
offset_top = 162.0
offset_right = 413.0
offset_bottom = 236.0
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_hover_color = Color(0.784314, 0.376471, 0.294118, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Play
"
icon = ExtResource("4_wsxck")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="Singleplayer" type="Control" parent="."]
anchors_preset = 0
offset_left = -654.0
offset_top = 360.0
offset_right = -614.0
offset_bottom = 400.0

[node name="Difficulty" type="Control" parent="Singleplayer"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="Sprite2D" parent="Singleplayer/Difficulty"]
position = Vector2(310.5, -6.29229)
rotation = -0.191986
scale = Vector2(2.48525, 112.76)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Difficulty" type="RichTextLabel" parent="Singleplayer/Difficulty"]
layout_mode = 0
offset_left = 16.0
offset_top = 33.0
offset_right = 220.0
offset_bottom = 63.0
rotation = -0.191986
theme = ExtResource("2_baduv")
text = "Difficulty"
fit_content = true
scroll_active = false

[node name="Options" type="Control" parent="Singleplayer/Difficulty"]
layout_mode = 3
anchors_preset = 0
offset_left = 310.5
offset_top = 202.15
offset_right = 350.5
offset_bottom = 242.15

[node name="Background Low" type="Sprite2D" parent="Singleplayer/Difficulty/Options"]
position = Vector2(0, -114.839)
rotation = -0.191986
scale = Vector2(2.48525, 75.9657)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Low" type="Button" parent="Singleplayer/Difficulty/Options"]
layout_mode = 0
offset_left = -347.0
offset_top = -86.0
offset_right = 324.0
offset_bottom = -11.0
rotation = -0.191986
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_group = ExtResource("5_ku851")
text = "50%"
flat = true
expand_icon = true

[node name="Background Mid" type="Sprite2D" parent="Singleplayer/Difficulty/Options"]
position = Vector2(0, -39.8394)
rotation = -0.191986
scale = Vector2(2.48525, 75.9657)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Mid" type="Button" parent="Singleplayer/Difficulty/Options"]
layout_mode = 0
offset_left = -347.0
offset_top = -11.0
offset_right = 324.0
offset_bottom = 64.0
rotation = -0.191986
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_ku851")
text = "100%"
flat = true
expand_icon = true

[node name="Background Top" type="Sprite2D" parent="Singleplayer/Difficulty/Options"]
position = Vector2(0, 35.1606)
rotation = -0.191986
scale = Vector2(2.48525, 75.9657)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Top" type="Button" parent="Singleplayer/Difficulty/Options"]
layout_mode = 0
offset_left = -347.0
offset_top = 64.0
offset_right = 324.0
offset_bottom = 139.0
rotation = -0.191986
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_group = ExtResource("5_ku851")
text = "150%"
flat = true
expand_icon = true

[node name="Goals" type="Control" parent="Singleplayer"]
anchors_preset = 0
offset_left = 1235.0
offset_top = -18.0
offset_right = 1275.0
offset_bottom = 22.0

[node name="Background" type="Sprite2D" parent="Singleplayer/Goals"]
position = Vector2(310.5, 363)
rotation = -0.191986
scale = Vector2(2.48525, 112.76)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Goals" type="RichTextLabel" parent="Singleplayer/Goals"]
layout_mode = 0
offset_left = 18.0
offset_top = 408.0
offset_right = 296.0
offset_bottom = 438.0
rotation = -0.191986
theme = ExtResource("2_baduv")
text = "Points to win"
fit_content = true
scroll_active = false

[node name="Options" type="Control" parent="Singleplayer/Goals"]
anchors_preset = 0
offset_left = 18.0
offset_top = 408.0
offset_right = 58.0
offset_bottom = 448.0

[node name="Background Low" type="Sprite2D" parent="Singleplayer/Goals/Options"]
position = Vector2(292.5, 49.194)
rotation = -0.191986
scale = Vector2(2.48525, 75.9657)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Low" type="Button" parent="Singleplayer/Goals/Options"]
layout_mode = 0
offset_left = -54.5
offset_top = 78.033
offset_right = 616.5
offset_bottom = 153.033
rotation = -0.191986
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_group = ExtResource("6_ypyyx")
text = "5"
flat = true
expand_icon = true

[node name="Background Mid" type="Sprite2D" parent="Singleplayer/Goals/Options"]
position = Vector2(292.5, 124.194)
rotation = -0.191986
scale = Vector2(2.48525, 75.9657)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Mid" type="Button" parent="Singleplayer/Goals/Options"]
layout_mode = 0
offset_left = -54.5
offset_top = 153.033
offset_right = 616.5
offset_bottom = 228.033
rotation = -0.191986
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_pressed = true
button_group = ExtResource("6_ypyyx")
text = "10"
flat = true
expand_icon = true

[node name="Background Top" type="Sprite2D" parent="Singleplayer/Goals/Options"]
position = Vector2(292.5, 199.194)
rotation = -0.191986
scale = Vector2(2.48525, 75.9657)
skew = 0.191986
texture = SubResource("GradientTexture1D_sxvuo")

[node name="Top" type="Button" parent="Singleplayer/Goals/Options"]
layout_mode = 0
offset_left = -54.5
offset_top = 228.033
offset_right = 616.5
offset_bottom = 303.033
rotation = -0.191986
focus_mode = 0
theme = ExtResource("2_baduv")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_group = ExtResource("6_ypyyx")
text = "15"
flat = true
expand_icon = true

[node name="Back" type="Control" parent="Singleplayer"]
anchors_preset = 0
offset_left = -17.0
offset_top = 118.0
offset_right = 23.0
offset_bottom = 158.0

[node name="Background" type="Sprite2D" parent="Singleplayer/Back"]
position = Vector2(310.5, 674.978)
rotation = -0.191986
scale = Vector2(2.48525, 177.644)
skew = 0.191986
texture = SubResource("GradientTexture1D_p1pnq")

[node name="Back" type="Button" parent="Singleplayer/Back"]
layout_mode = 0
offset_left = -35.0
offset_top = 653.0
offset_right = 637.0
offset_bottom = 829.0
rotation = -0.191986
focus_mode = 0
theme = ExtResource("2_baduv")
text = "Go back"

[node name="Settings" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -121.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Button" type="Button" parent="Settings"]
layout_mode = 2
text = "Sound"

[node name="Button2" type="Button" parent="Settings"]
layout_mode = 2
text = "Sensitividad"

[node name="Button4" type="Button" parent="Settings"]
layout_mode = 2
text = "Como jugar"

[node name="Button3" type="Button" parent="Settings"]
layout_mode = 2
text = "Creditos"

[node name="Loading" type="TextureRect" parent="."]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("GradientTexture1D_srhlv")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Loading"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -44.0
offset_right = 150.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Loading..."
metadata/_edit_use_anchors_ = true

[node name="3D" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="3D"]
keep_aspect = 0
environment = SubResource("Environment_5bnlt")
projection = 1
current = true
size = 2.829

[node name="root" parent="3D" instance=ExtResource("2_pwupd")]
transform = Transform3D(0.294466, 0, 0.16796, 0, 0.339, 0, -0.16796, 0, 0.294466, -1.615, -0.412, -1.944)

[node name="Skeleton3D" parent="3D/root" index="0"]
transform = Transform3D(0.649355, 0, 0.760485, 0, 1, 0, -0.760485, 0, 0.649355, 0, 0, 0)
bones/2/position = Vector3(8.37526e-05, 0.0169953, -0.00122655)
bones/2/rotation = Quaternion(0.0994292, 0.0684496, 0.0198485, 0.992489)
bones/3/rotation = Quaternion(-0.00990053, -0.143694, -0.0314014, 0.989074)
bones/4/rotation = Quaternion(0.0205599, -0.018777, 0.0316391, 0.999111)
bones/5/rotation = Quaternion(0.039652, -0.0198735, 0.0291795, 0.99859)
bones/6/rotation = Quaternion(0.0135943, 0.0131931, -0.0101899, 0.999769)
bones/7/rotation = Quaternion(-0.0937916, 0.0755502, -0.0352931, 0.992094)
bones/11/rotation = Quaternion(0.48933, 0.497028, -0.476437, 0.535282)
bones/12/rotation = Quaternion(0.500676, -0.0443871, 0.16363, 0.848869)
bones/13/rotation = Quaternion(0.0683059, -0.00595797, 0.84181, 0.535401)
bones/14/rotation = Quaternion(-0.083534, -0.0533, -0.180922, 0.978493)
bones/15/rotation = Quaternion(0.0331937, 0.130202, 0.21834, 0.966578)
bones/16/rotation = Quaternion(0.0417129, 0.12801, -0.108667, 0.984919)
bones/17/rotation = Quaternion(-0.00841586, 0.0417486, -0.0289295, 0.998674)
bones/19/rotation = Quaternion(0.0127112, -0.0225106, 0.0283889, 0.999263)
bones/20/rotation = Quaternion(0.0715878, 0.00521481, -0.0112136, 0.997358)
bones/21/rotation = Quaternion(0.00840326, -6.52005e-09, -0.00127135, 0.999964)
bones/23/rotation = Quaternion(0.0127995, -0.0305276, 0.0283065, 0.999051)
bones/24/rotation = Quaternion(0.0716456, 0.0136554, -0.0113276, 0.997272)
bones/25/rotation = Quaternion(0.00839941, -0.00292942, -0.00173754, 0.999959)
bones/27/rotation = Quaternion(0.00765413, -0.0170626, -0.00685995, 0.999802)
bones/28/rotation = Quaternion(0.0770979, 0.00272592, 0.0242981, 0.996724)
bones/29/rotation = Quaternion(0.0623902, 2.59039e-08, -0.00943016, 0.998007)
bones/31/rotation = Quaternion(0.450762, -0.523785, 0.46635, 0.552251)
bones/32/rotation = Quaternion(0.50408, -0.324879, 0.39284, 0.697161)
bones/33/rotation = Quaternion(0.0595327, 0.00753183, -0.733688, 0.676832)
bones/34/rotation = Quaternion(-0.169253, 0.0275503, 0.174731, 0.969569)
bones/35/rotation = Quaternion(0.149524, -0.128281, -0.213138, 0.956953)
bones/36/rotation = Quaternion(0.0336576, -0.113246, 0.201233, 0.972393)
bones/37/rotation = Quaternion(-0.0153013, -0.0341585, 0.0596356, 0.997518)
bones/39/rotation = Quaternion(0.0698451, 0.0207382, -0.0203106, 0.997135)
bones/40/rotation = Quaternion(0.188347, -0.00513263, 0.0297288, 0.981639)
bones/41/rotation = Quaternion(0.0369515, 1.02148e-07, 0.00563462, 0.999301)
bones/43/rotation = Quaternion(0.0700057, 0.0287339, -0.0197498, 0.996937)
bones/44/rotation = Quaternion(0.188123, -0.0133874, 0.0307073, 0.981574)
bones/45/rotation = Quaternion(0.036939, 0.00294022, 0.00615683, 0.999294)
bones/47/rotation = Quaternion(0.0950826, 0.0147981, -0.0171967, 0.995211)
bones/48/rotation = Quaternion(0.220303, -0.000139516, 0.0335941, 0.974853)
bones/49/rotation = Quaternion(0.122274, -1.37517e-08, 0.0186277, 0.992322)
bones/51/rotation = Quaternion(0.028957, -0.332567, 0.942588, -0.00946023)
bones/52/rotation = Quaternion(-0.452996, 0.0845487, 0.00626212, 0.887472)
bones/53/rotation = Quaternion(0.409515, 0.0192394, 0.00803889, 0.912065)
bones/54/rotation = Quaternion(0.170039, -0.02901, 0.122057, 0.977419)
bones/56/rotation = Quaternion(0.0738473, 0.438985, 0.893381, 0.0609073)
bones/57/rotation = Quaternion(-0.128454, 0.0709746, -0.0280585, 0.988774)
bones/58/rotation = Quaternion(0.381894, 0.0731175, 0.0264234, 0.92093)
bones/59/rotation = Quaternion(0.187474, 0.0316566, -0.122401, 0.974099)

[node name="ankle_low" parent="3D/root/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="chest_low" parent="3D/root/Skeleton3D" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="ear_joint_low" parent="3D/root/Skeleton3D" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="ears_low" parent="3D/root/Skeleton3D" index="3"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="feet_low" parent="3D/root/Skeleton3D" index="4"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="finger_index_low" parent="3D/root/Skeleton3D" index="5"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="finger_middle_low" parent="3D/root/Skeleton3D" index="6"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="finger_pinky_low" parent="3D/root/Skeleton3D" index="7"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="finger_thumb_low" parent="3D/root/Skeleton3D" index="8"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="forearm_low" parent="3D/root/Skeleton3D" index="9"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="head_main_low" parent="3D/root/Skeleton3D" index="11"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="head_mohawk_low" parent="3D/root/Skeleton3D" index="12"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="head_screen_low" parent="3D/root/Skeleton3D" index="13"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="heels_low" parent="3D/root/Skeleton3D" index="14"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="palm_low" parent="3D/root/Skeleton3D" index="15"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="pelvis_low" parent="3D/root/Skeleton3D" index="16"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="scarf_low" parent="3D/root/Skeleton3D" index="17"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="screw_low" parent="3D/root/Skeleton3D" index="18"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="shin_low" parent="3D/root/Skeleton3D" index="19"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="shoulder_low" parent="3D/root/Skeleton3D" index="20"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="thigh_low" parent="3D/root/Skeleton3D" index="21"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="torso_mid_low" parent="3D/root/Skeleton3D" index="22"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="upperarm_low" parent="3D/root/Skeleton3D" index="23"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="wrist_low" parent="3D/root/Skeleton3D" index="24"]
surface_material_override/0 = SubResource("StandardMaterial3D_0444c")

[node name="AnimationPlayer" parent="3D/root" index="1"]
libraries = {
"": SubResource("AnimationLibrary_jv43l"),
"jammo_library": ExtResource("4_88vpu")
}

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="3D"]

[node name="animation_manager" type="Node" parent="."]
script = ExtResource("4_2yvtr")

[node name="AnimationTree" type="AnimationTree" parent="animation_manager"]
root_node = NodePath("../../3D/root")
tree_root = SubResource("AnimationNodeBlendTree_3cuse")
anim_player = NodePath("../../3D/root/AnimationPlayer")
parameters/Bateo/active = false
parameters/Bateo/internal_active = false
parameters/Bateo/request = 0
parameters/Sumergir/active = false
parameters/Sumergir/internal_active = false
parameters/Sumergir/request = 0

[node name="Timer" type="Timer" parent="animation_manager"]
one_shot = true
autostart = true

[node name="animation_timer" type="Timer" parent="animation_manager"]
wait_time = 7.0
one_shot = true

[connection signal="start_singleplayer_mode" from="." to="animation_manager" method="_on_start_screen_start_singleplayer_mode"]
[connection signal="button_down" from="Start/Start" to="animation_manager" method="_on_start_button_down"]
[connection signal="pressed" from="Lobby Menu/Single/Single" to="." method="_on_single_pressed"]
[connection signal="pressed" from="Lobby Menu/Multi/Multi" to="." method="_on_multi_pressed"]
[connection signal="toggled" from="Singleplayer/Difficulty/Options/Low" to="." method="_on_low_toggled"]
[connection signal="toggled" from="Singleplayer/Difficulty/Options/Mid" to="." method="_on_mid_toggled"]
[connection signal="toggled" from="Singleplayer/Difficulty/Options/Top" to="." method="_on_top_toggled"]
[connection signal="toggled" from="Singleplayer/Goals/Options/Low" to="." method="_on_low_goals_toggled"]
[connection signal="toggled" from="Singleplayer/Goals/Options/Mid" to="." method="_on_mid_goals_toggled"]
[connection signal="toggled" from="Singleplayer/Goals/Options/Top" to="." method="_on_top_goals_toggled"]
[connection signal="pressed" from="Singleplayer/Back/Back" to="animation_manager" method="_on_back_pressed"]
[connection signal="load_singleplayer" from="animation_manager" to="." method="_on_animation_manager_load_singleplayer"]
[connection signal="timeout" from="animation_manager/Timer" to="animation_manager" method="_on_timer_timeout"]

[editable path="3D/root"]
